доп. оборудование и клиенты сделаны 20.05.2025